# global-milk-emissions-inequality

./: .gitignore  AGENTS.md  README.md  pyproject.toml  verify_output.txt  verify_output_16.txt  verify_quiet.txt
data/: cercetare-485010.faostat_clean.milk_emission_intensity_2020_2023.csv  cercetare-485010.faostat_clean.milk_intensity_country_year.csv  cercetare-485010.faostat_clean.milk_species_structure.csv  m49_regions.csv
methane_portfolio/: __init__.py  advanced_analytics.py  bayes.py  cli.py  config.py  figures.py  figures_advanced.py  io.py  optimize.py  report.py  robust_optimize.py  shapley.py  tables.py  uncertainty.py  utils.py  validate.py
scripts/: editorial_integrity_check.py  prepublish_check.py  reproduce.py  run_all.sh
tests/: __init__.py  conftest.py  test_advanced_analytics.py  test_bayes_diagnostics.py  test_bayes_small.py  test_robust_opt.py  test_shapley.py  test_tables.py  test_validate.py
