[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methane-portfolio"
version = "0.1.0"
description = "Bayesian Species Portfolio Optimization for Milk Methane Emissions (2020-2023)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Research Team"}]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pymc>=5.10",
    "arviz>=0.17",
    "xarray>=2023.6",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
methane-portfolio = "methane_portfolio.cli:main"

[tool.setuptools.packages.find]
include = ["methane_portfolio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
